eigenvalues TISE w/ any potential

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .DS_Store
 .idea
+numerical-schrodinger-equation/one-dimensional-solution/.ipynb_checkpoints/1d-numerical-schrodinger-equation-checkpoint.ipynb
